# claude-quant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run_web.py
.github/workflows/: tests.yml
config/: default.yaml
cq/: __init__.py  cli.py
cq/benchmark/: __init__.py  cross_validation.py  momentum_topn.py  report.py
cq/core/: event_bus.py  events.py  models.py
cq/data/: calendar.py  pipeline.py
cq/engine/: backtest_engine.py  portfolio.py
cq/execution/: paper.py  qmt.py  simulated.py
cq/live/: __init__.py  alerts.py  engine.py  recovery.py  report.py  safety.py
cq/performance/: metrics.py
cq/research/: __init__.py  forward_return.py  grouping.py  ic.py  report.py
cq/risk/: pre_trade.py
cq/strategy/: base.py  registry.py
cq/universe/: __init__.py  base.py  liquid.py  pit.py  presets.py  static.py
cq/utils/: config.py  trading_rules.py
docs/: ARCHITECTURE.md  claude_quant_optimization_plan.md  cross_validation_report.md  dev_guide.md  type_debt.md
docs/data_sources/: pit_universe_sources.md
docs/design/: 01-data-layer.md  02-backtest-engine.md  03-strategy-guide.md  04-risk-management.md  05-performance-metrics.md
scripts/: download_all_stocks.py  download_data.py  run_backtest.py  run_cross_validation.py  run_factor_report.py  run_live.py
tests/e2e/: conftest.py  test_backtest_flow.py  test_index_page.py  test_result_page.py
tests/integration/: test_backtest_e2e.py  test_live_engine.py
tests/property/: test_invariants.py
web/: app.py  benchmark_runner.py  benchmark_store.py  data_update_service.py  db.py  live_runner.py  price_loader.py  research_runner.py  research_store.py  runner.py  schemas.py  serializers.py  store.py  universe_registry.py
web/routers/: data.py  (+9 more)
(+84 files in other folders)
